Fix banner alignment

--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,18 @@ a {
 }
 
 .banner {
-    height: 300px;
+    height: 400px;
     flex-wrap: wrap;
+    justify-content: space-between;
+}
+.bannerText {
+    max-width: 300px;
+}
+.bannerImage {
+    flex: 0 0 auto;
+    width: 240px;
+    height: 100px;
+    text-align: center;
+    padding-top: 120px;
+    flex: 1;
 }
